@@ -40,6 +40,11 @@
 <p>2023-06-03  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li><p>magick/effect.c (GetBlurKernel): Use resource limited memory
+allocator for blur kernel.  This plus MagickStrToD() updates
+addresses #703 &quot;allocation-size-too-big in gm (magick/effect.c:797
+in GetBlurKernel)&quot;.</p></li>
+<li><p>magick/utility.c (MagickStrToD): Add infinity and nan checks.</p></li>
 <li><p>magick/command.c (MogrifyImage): Assure that -set has arguments.
 Addresses SourceForge issue #701 &quot;Segmentation Violation in gm
 (magick/attribute.c:324 in SetImageAttribute)&quot;.</p></li>
