@@ -1,5 +1,12 @@
 2023-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* magick/effect.c (GetBlurKernel): Use resource limited memory
+	allocator for blur kernel.  This plus MagickStrToD() updates
+	addresses #703 "allocation-size-too-big in gm (magick/effect.c:797
+	in GetBlurKernel)".
+
+	* magick/utility.c (MagickStrToD): Add infinity and nan checks.
+
 	* magick/command.c (MogrifyImage): Assure that -set has arguments.
 	Addresses SourceForge issue #701 "Segmentation Violation in gm
 	(magick/attribute.c:324 in SetImageAttribute)".
